add changes for send friend request
