# packages/domain/src/command/index.ts
@@ -1,3 +1,5 @@
 export * as CreateCategory from './create-category-handler'
 export * as CreatePost from './create-post-handler'
 export * as ReplaceCategory from './replace-category-handler'
+export * as SendFriendRequest from './send-friend-request-handler'
+
